[gd_scene load_steps=17 format=3 uid="uid://bbvmo7y5quj1s"]

[ext_resource type="FontFile" uid="uid://c8ub0nincslom" path="res://assets/sprites/Font/SymphonyoftheNightfont.ttf" id="1_hfjao"]
[ext_resource type="Script" path="res://SampleProject/Scripts/System/hint_box.gd" id="1_ltenk"]
[ext_resource type="Script" path="res://SampleProject/Scripts/System/Menu/ButtonTextEffect.gd" id="3_chrie"]
[ext_resource type="Script" path="res://SampleProject/Scripts/System/menu_sounds.gd" id="3_jwu5c"]
[ext_resource type="Script" path="res://SampleProject/Scripts/AudioLibrary.gd" id="4_twsgs"]
[ext_resource type="Script" path="res://SampleProject/Scripts/soundEffect.gd" id="5_bpbf7"]
[ext_resource type="AudioStream" uid="uid://bt2twsi6xy61v" path="res://assets/sounds/Menu/Window.wav" id="6_7n3ic"]

[sub_resource type="Theme" id="Theme_0pcjg"]
default_font = ExtResource("1_hfjao")
default_font_size = 32

[sub_resource type="Gradient" id="Gradient_yqhpb"]
colors = PackedColorArray(0, 0, 0.713726, 0.705882, 0, 0.215686, 0, 0.67451)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fljae"]
gradient = SubResource("Gradient_yqhpb")
height = 48
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qh7qy"]
texture = SubResource("GradientTexture2D_fljae")
texture_margin_left = 10.0
texture_margin_top = 7.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="Animation" id="Animation_ksj4u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_46ghl"]
resource_name = "popup"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4o5me"]
_data = {
"RESET": SubResource("Animation_ksj4u"),
"popup": SubResource("Animation_46ghl")
}

[sub_resource type="Resource" id="Resource_dkt31"]
script = ExtResource("5_bpbf7")
Tag = "open"
stream = ExtResource("6_7n3ic")

[sub_resource type="Resource" id="Resource_oeyjm"]
script = ExtResource("4_twsgs")
sound_effects = Array[ExtResource("5_bpbf7")]([SubResource("Resource_dkt31")])

[node name="HintBox" type="Control" node_paths=PackedStringArray("label", "timer", "sound", "animation")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ltenk")
label = NodePath("CenterContainer/PanelContainer/RichTextLabelWithButtons")
timer = NodePath("Timer")
sound = NodePath("PolyphonicMenuAudio")
animation = NodePath("AnimationPlayer")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -54.0
offset_right = 154.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 1e-05)

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_0pcjg")
theme_override_styles/panel = SubResource("StyleBoxTexture_qh7qy")

[node name="RichTextLabelWithButtons" type="RichTextLabel" parent="CenterContainer/PanelContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Press [img]res://assets/sprites/HUD/Buttons/Square.png[/img] to attack."
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("3_chrie")
new_text = "Press [[Square]] to attack."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4o5me")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PolyphonicMenuAudio" type="AudioStreamPlayer" parent="."]
volume_db = -18.0
script = ExtResource("3_jwu5c")
audio_library = SubResource("Resource_oeyjm")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
